external-crates/move/crates/move-compiler/tests/move_check/parser/ability_modifier_invalid_infix_with_valid_postfix.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/ability_modifier_invalid_infix_with_valid_postfix.move:4:20
  │
4 │     struct Foo has {} has copy;
  │                    ^ Unexpected '{'. Expected a type ability, one of: 'copy', 'drop', 'store', or 'key'

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/parser/ability_modifier_invalid_infix_with_valid_postfix.move:4:23
  │
4 │     struct Foo has {} has copy;
  │                       ^^^ Postfix abilities are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01003]: invalid modifier
  ┌─ tests/move_check/parser/ability_modifier_invalid_infix_with_valid_postfix.move:4:23
  │
4 │     struct Foo has {} has copy;
  │                ---    ^^^ Duplicate ability declaration. Abilities can be declared before or after the field declarations, but not both.
  │                │       
  │                Ability declaration previously given here

